--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
+<html>
 	<head>
-
+		<meta charset= "utf-8" />
+		<!-- Bootstrap styles and Minified Java -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+		<title> Simple Jack's </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	</head>
 	<body>
+		<div class="container">
+			<!-- Start First Row -->
+			<div class="row">
 
+			</div>
+			<!-- Start Second Row -->
+			<div class="row">
+			
+			</div>
+			<!-- Start Third Row -->
+			<div class="row">
+			
+			</div>
+		</div>
 	</body>
-
+</html>
