--- a/jack.html
+++ b/jack.html
@@ -9,10 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-		<!-- Font Awesome -->
-		<link rel="stylesheet" href="css/fontawesome.min.css" />
-		<!--Own Stylesheet-->
-		<link rel="stylesheet" href="css/style.css" />
+
 		<title> Simple Jack's </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<!-- Google Analytics -->
@@ -60,7 +57,6 @@
 						 <a class="dropdown-item" href="map.html">Location of the Month</a>
 					 </div>
 				 </li>
-				 <li><a jref="https://www.facebook.com"><i class="fa fa-facebook-official fa-2" aria-hidden="true"></i></a></li>
 		    </ul>
 		    <form class="form-inline navbar-dark bg-primary">
 		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -70,7 +66,7 @@
 		</nav>
 		<!-- End Navigation Bar -->
 		<div class="container">
-			<!-- Start First Row Carousel -->
+			<!-- Start First Row -->
 			<div class="bd-example">
 			  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			    <ol class="carousel-indicators">
@@ -80,24 +76,10 @@
 			    </ol>
 			    <div class="carousel-inner">
 			      <div class="carousel-item active">
-			        <img src="img/Backgate.jpg" class="d-block w-100" alt="Mountains">
+			        <img src="img/UnionJackIPA.png" class="d-block w-100" alt="Union Jack">
 			        <div class="carousel-caption d-none d-md-block">
-			          <h5>Sutter Buttes</h5>
-			          <p>Sometimes it's raining where you stand, but you can still see the light.</p>
-			        </div>
-			      </div>
-			      <div class="carousel-item">
-			        <img src="img/HH-60G.JPG" class="d-block w-100" alt="Desert Helicopter">
-			        <div class="carousel-caption d-none d-md-block">
-			          <h5>HH-60G </h5>
-			          <p>When life gets tough, pararescue is on their way, even in the toughest of locations.</p>
-			        </div>
-			      </div>
-			      <div class="carousel-item">
-			        <img src="img/SunSet.jpg" class="d-block w-100" alt="Sunset">
-			        <div class="carousel-caption d-none d-md-block">
-			          <h5>Destin</h5>
-			          <p>At the end of the day, all you need is a place to relax with good friends.</p>
+			          <h5>Jack's Pick of the Month</h5>
+			          <p>Firestone Walker's Union Jack, to help you forget even the worst days.</p>
 			        </div>
 			      </div>
 			    </div>
@@ -111,11 +93,6 @@
 			    </a>
 			  </div>
 			</div>
-			<!--End Carousel -->
-			<div class="col-xs-12 col-lg-6">
-
-			</div>
-
 		</div>
 	</body>
 </html>
